More code cleanup for dates and such.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meeting of the Minds - St. John's Annual Trivia Championships 2025</title>
-    <meta name="description" content="Join St. John's premier trivia championship on January 31, 2025. 100 participants, 20 teams, $1,000+ in prizes. Support NL Eats while competing at Signal Hill Campus." />
-    <meta name="author" content="Meeting of the Minds" />
-    <meta name="keywords" content="St. John's trivia, trivia championship, NL Eats, trivia night Newfoundland, Signal Hill Campus, community event" />
 
-    <meta property="og:title" content="Meeting of the Minds - St. John's Trivia Championships" />
-    <meta property="og:description" content="100 of St. John's sharpest minds compete January 31, 2025. Join the premier trivia championship supporting NL Eats." />
-    <meta property="og:type" content="website" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meeting of the Minds - St. John's Annual Trivia Championships 2025</title>
+  <meta name="description"
+    content="Join St. John's premier trivia championship on January 31st, 2026. 100 participants, 20 teams, $1,000+ in prizes. Support NL Eats while competing at MUN Signal Hill Campus." />
+  <meta name="author" content="Meeting of the Minds" />
+  <meta name="keywords"
+    content="St. John's trivia, trivia championship, NL Eats, trivia night Newfoundland, MUN Signal Hill Campus, community event" />
 
-  </head>
+  <meta property="og:title" content="Meeting of the Minds - St. John's Trivia Championships" />
+  <meta property="og:description"
+    content="100 of St. John's sharpest minds compete January 31st, 2026. Join the premier trivia championship supporting NL Eats." />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
